added the remove exercise

--- a/www/view/home.html
+++ b/www/view/home.html
@@ -11,7 +11,8 @@
         </fieldset>
 
         <fieldset class="pure-group">
-            <a data-ng-click="addExercise()">Add exercise</a>
+            <a href="" data-ng-click="addExercise()">Add exercise</a>
+            <a href="" data-ng-click="removeExercise()" data-ng-show="showRemove">Remove exercise</a>
         </fieldset>
 
         <fieldset class="pure-group">
