Added scope watch to duration and repeat

--- a/www/view/settings.html
+++ b/www/view/settings.html
@@ -3,7 +3,9 @@
     <div class="item item-thumbnail-left">
         <img src="img/ionic.png">
         <h2>{{name}}</h2>
-        <p>{{email}}</p>
+        <p>{{email}}<br />
+            Total time: <span class="positive">{{totalTime}}</span>s | <span class="positive">{{totalTimeMin}}</span>min
+        </p>
     </div>
     <br />
     <div class="item item-icon-left">
