--- a/www/view/settings.html
+++ b/www/view/settings.html
@@ -1,7 +1,7 @@
 <div class="list list-inset">
 
     <div class="item item-thumbnail-left">
-        <img src="img/ionic.png">
+        <img gravatar-src="email" gravatar-size="100">
         <h2>{{name}}</h2>
         <p>{{email}}<br />
             Total time: <span class="positive">{{totalTime}}</span>s | <span class="positive">{{totalTimeMin}}</span>min
